--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "lint": "npx next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/pro-theme": "^0.0.47",
-    "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/pro-theme": "^0.0.49",
+    "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.3",
     "next": "^12.1.5",
     "node-html-parser": "^5.3.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
     "@types/node": "^17.0.25",
-    "@types/react": "17.0.44",
-    "@types/react-dom": "^17.0.16",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.5",
     "prettier": "^2.6.2",
